--- a/foodjardeliveryapp/src/main/res/values/strings.xml
+++ b/foodjardeliveryapp/src/main/res/values/strings.xml
@@ -1,3 +1,97 @@
 <resources>
-    <string name="app_name">FoodJarDeliveryApp</string>
+    <string name="app_name">FoodJar Delivery App</string>
+    <string name="search">Search</string>
+    <string name="find_an_item">Find an Item</string>
+    <string name="filters">Filters</string>
+    <string name="item_image">Item_Image</string>
+    <string name="_25_00">$ 25.00</string>
+    <string name="price">Price</string>
+    <string name="item_id_005">Item-ID-005</string>
+    <string name="pizza">Special Chicken B.B.Q Pizza</string>
+    <string name="stock">Stock :</string>
+    <string name="_55_items">55 Items</string>
+    <string name="add_new_item">Add New Item</string>
+    <string name="item_name">Item Name</string>
+    <string name="name">Name</string>
+    <string name="quantity">Quantity</string>
+    <string name="available_stock">Available Stock</string>
+    <string name="item_price">Item Price</string>
+    <string name="description_optional">Description (Optional)</string>
+    <string name="description">Description</string>
+    <string name="upload_item_image">Upload Item Image</string>
+    <string name="add_image">add_image</string>
+    <string name="save">Save</string>
+    <string name="place_an_order">Place an Order</string>
+    <string name="search_item">Search Item</string>
+    <string name="check_stock">Check Stock</string>
+    <string name="order_history">My Orders</string>
+    <string name="user_profile">User Profile</string>
+    <string name="dashboard">Dashboard</string>
+    <string name="back_button">back_button</string>
+    <string name="rs_50_00">Rs.50.00/-</string>
+    <string name="itemimage">ItemImage</string>
+    <string name="stock_50_items">Stock : 50 Items</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="sign_up_now">Sign Up Now !</string>
+    <string name="login">Login</string>
+    <string name="login_to_your_account">Login to Your Account</string>
+    <string name="create_a_new_account">Create a New Account</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="sign_in_now">Sign In Now !</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="address">Address</string>
+    <string name="back">Back</string>
+    <string name="item_category">Item Category</string>
+    <string name="e_g_fruit_vegetable_cold_drink_etc">e.g. fruit, vegetable, cold drink etc</string>
+    <string name="e_g_kg_dozen_items">e.g. Kg, dozen, items</string>
+    <string name="unit">Unit</string>
+    <string name="fast_food">Fast Food</string>
+    <string name="add_to_cart">ADD TO CART</string>
+    <string name="the_translations_below_need_to_be_checked_and_inserted_above_into_the_appropriate_translation_tables_removing_any_numbers_numbers_do_not_necessarily_match_those_in_definitions_see_instructions_at">The translations below need to be checked and inserted above into the appropriate translation tables, removing any numbers. Numbers do not necessarily match those in definitions. See instructions at</string>
+    <string name="in_stock_15_items_left">In Stock : 15 Items Left</string>
+    <string name="item_details">Item Details</string>
+    <string name="us_2_00_item">US $ 2.00 /Item</string>
+    <string name="referred_by">Referred By</string>
+    <string name="cart">Shopping Cart</string>
+    <string name="place_order">Place Order</string>
+    <string name="_25_items">25 Items</string>
+    <string name="price_">Price : </string>
+    <string name="look_like_you_have_no_items_in_your_shopping_cart">Look like you have no items in your shopping cart</string>
+    <string name="cart_is_empty">Cart is empty !</string>
+    <string name="total">Total =</string>
+    <string name="rs_2_250">Rs.2,250/-</string>
+    <string name="placeholderimage">placeholderImage</string>
+    <string name="continue_shopping">Continue Shopping</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+    <string name="home">Home</string>
+    <string name="my_orders">My Orders</string>
+    <string name="log_out">Log Out</string>
+    <string name="navbutton">navbutton</string>
+    <string name="total_amount">Total Amount</string>
+    <string name="total_items">Total Items :</string>
+    <string name="_20">20</string>
+    <string name="remember_me">Remember Me</string>
+    <string name="foodjar_delivery_app">FoodJar Delivery App</string>
+    <string name="order_id">ORDER ID</string>
+    <string name="order_details">Order Details</string>
+    <string name="_1555312355">1555312355</string>
+    <string name="muhammad_zeeshan">Muhammad Zeeshan</string>
+    <string name="_92_301_3370834">+92-301-3370834</string>
+    <string name="shop_name">Shop Name</string>
+    <string name="order_status">Order Status</string>
+    <string name="adan_foods_pvt_ltd">Adan Foods Pvt Ltd.</string>
+    <string name="pending">Pending</string>
+    <string name="shop_address">Shop Address</string>
+    <string name="shop_125">Shop 125</string>
+    <string name="_">#</string>
+    <string name="qty">Qty</string>
+    <string name="amount">Amount</string>
+    <string name="total_order_amount">Total Order Amount</string>
+    <string name="mark_as_delivered">Mark As Delivered</string>
+    <string name="total_amount_">Total Amount =</string>
+    <string name="my_recent_orders">My Recent Orders</string>
 </resources>
